mobile nav bar toggle fixes
* -unused files
* added invisible text for screen readers (previously this only appeared in the unused files)
* hid mobile navbar toggle on wide screens (previously, it was just blending into the background in the middle and would become visible when hovered...)

--- a/src/components/header.css
+++ b/src/components/header.css
@@ -56,8 +56,13 @@
 		padding-inline-start: 0;
 	}
 
+	label[for='nav-bar-toggle'] {
+		display: none;
+		font-size: 0;
+	}
+
 	@media screen and (max-width: 30rem) {
-		label {
+		label[for='nav-bar-toggle'] {
 			aspect-ratio: 1;
 			/** @note adapted from: https://codepen.io/artem-isaev/pen/RmyrOp */
 			background-image: linear-gradient(
